# fictional-octo-invention

./: .gitignore  README.md  arcaea_jacket_overrides.json  build.py  config.toml.example  cytus2_jacket_overrides.json  generate.py  pyproject.toml
.github/workflows/: deploy.yml
data/: arcaea.json  cytus2.json  pjsk.json  recent.json
static/: style.css
templates/: arcaea_b30.html  arcaea_r30.html  base.html  cytus2_b30.html  index.html  pjsk_b30.html  recent.html
